--- a/test.html
+++ b/test.html
@@ -14,12 +14,18 @@ var group1 = new window.jsdraw.Group(paper);
 
 console.log(group1);
 
-
-var element = new window.jsdraw.Element2(paper, "circulo", "circle");
+var element4 = new window.jsdraw.lib.Rect(paper, "circulo4");
+var element2 = paper.circle("circulo2", {cx:50, cy:30});
+var element = paper.circle("circulo");
 
 // var el = paper.createElement("circle");
 
 element.mousemove(function(e)
+{
+	console.log(e.clientX);
+});
+
+element2.mousemove(function(e)
 {
 	console.log(e.clientX);
 });
@@ -52,36 +58,6 @@ container.addEventListener("click", function()
 //paper.clear();
 //paper.createElement("circle");
 
-var consta = function(nome)
-{
-	this.setNome(nome);
-	return this;
-}
-consta.prototype.setNome = function(nome)
-{
-	this.nome = nome;
-}
-consta.prototype.getNome = function()
-{
-	return this.nome;
-}
-
-var a = consta;
-
-var teste = new a("Samuel");
-console.log(teste.nome);
-
-var teste2 = new a("Berenice");
-console.log(teste2.nome);
-console.log(teste.nome);
-
-var b = consta;
-b.prototype.getNome = function()
-{
-	return "meu nome é " + this.nome;
-}
-var teste3 = new b("Marcelo");
-console.log(teste3.getNome());
 
 </script>
 </html>
